fixed cropper change button hidden issue

--- a/src/app/components/cropper/cropper.component.scss
+++ b/src/app/components/cropper/cropper.component.scss
@@ -1,5 +1,6 @@
 .cropper-encapsulator {
-    height: 500px;
+    min-height: 500px;
+    height: inherit;
     width: inherit;
 }
 
